--- a/src/Theme/colors.scss
+++ b/src/Theme/colors.scss
@@ -1,4 +1,5 @@
 $theme-colors: (
+  "color-dark": #212529,
   "color-bg": #1f1f38,
   "color-bg-variant": #2c2c6c,
   "color-primary": #7c83fd,
@@ -8,5 +9,15 @@ $theme-colors: (
   "color-sky-blue": #4db5ff,
   "color-salmon": #fa8072,
 );
+
+$color-dark: #212529;
+$color-bg: #1f1f38;
+$color-bg-variant: #2c2c6c;
+$color-primary: #7c83fd;
+$color-primary-variant: rgba(77, 181, 255, 0.4);
+$color-white: #fff;
+$color-light: rgba(255, 255, 255, 0.6);
+$color-sky-blue: #4db5ff;
+$color-salmon: #fa8072;
 
 @import "~bootstrap/scss/bootstrap";
