Added code, assets, and styles to build out header component

--- a/src/Components/Footer/footer.scss
+++ b/src/Components/Footer/footer.scss
@@ -5,7 +5,7 @@
   color: $color-white;
   display: flex;
   justify-content: center;
-  position: absolute;
+  position: relative;
   bottom: 0;
   width: 100%;
   min-height: 2.5rem;
