--- a/src/Components/Header/header.scss
+++ b/src/Components/Header/header.scss
@@ -5,9 +5,29 @@
     background-image: url("../../Assets/Images/header-img.png");
     background-size: cover;
     background-position: center;
-    min-height: 500px;
+    min-height: 400px;
     width: 100%;
     opacity: 40%;
+  }
+
+  .intro-area-text {
+    padding: 2rem;
+
+    p:nth-child(1),
+    p:nth-child(2) {
+      margin: 0 auto;
+      text-align: center;
+      padding-bottom: 0.5rem;
+    }
+
+    p:nth-child(1) {
+      font-size: 1.86rem;
+      font-weight: bold;
+    }
+
+    p:nth-child(2) {
+      font-size: 1.2rem;
+    }
   }
 
   .grid-2-col {
@@ -21,36 +41,29 @@
       justify-content: center;
       min-height: 300px;
       text-decoration: none;
-      color: $color-dark;
+
+      div {
+        color: $color-white;
+        width: 100%;
+        height: 300px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        background-position: center;
+      }
     }
 
     .left {
-      background-color: aqua;
+      background: url("../../Assets/Images/SWE-Header.jpeg");
+      opacity: 80%;
     }
 
     .right {
-      background-color: lavender;
+      background: url("../../Assets/Images/Photography-Header.png");
     }
   }
 
   .header-intro {
-    display: flex;
-    flex-direction: column;
-    padding: 1.5rem;
-
-    p:nth-child(1),
-    p:nth-child(2) {
-      margin: 0 auto;
-      padding-bottom: 0.5rem;
-    }
-
-    p:nth-child(1) {
-      font-size: 1.86rem;
-      font-weight: bold;
-    }
-
-    p:nth-child(2) {
-      font-size: 1.2rem;
-    }
+    padding: 2.5rem;
   }
 }
