--- a/src/Components/Header/header.scss
+++ b/src/Components/Header/header.scss
@@ -56,6 +56,10 @@
     .left {
       background: url("../../Assets/Images/SWE-Header.jpeg");
       opacity: 80%;
+
+      div {
+        background: rgba(0, 0, 0, 0.7);
+      }
     }
 
     .right {
