--- a/src/Components/SoftwareDeveloper/softwareDev.scss
+++ b/src/Components/SoftwareDeveloper/softwareDev.scss
@@ -1,3 +1,13 @@
+@import "../../Theme/colors.scss";
+
+.section_header_text {
+  text-align: center;
+
+  h2 {
+    color: $color-salmon;
+  }
+}
+
 .software-dev {
   display: grid;
   grid-template-columns: 80%;
@@ -9,12 +19,57 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    margin-bottom: 2rem;
+  }
+
+  .about {
+    margin-bottom: 2rem;
+
+    .about_inner {
+      display: grid;
+      grid-template-columns: repeat(2, 1fr);
+      column-gap: 10px;
+      padding: 2.5rem 0;
+
+      .card {
+        &.left-img {
+          border: none;
+        }
+      }
+
+      .about_info_section {
+        > div {
+          display: flex;
+          flex-direction: row;
+        }
+        .card {
+          width: 100%;
+
+          .card-body {
+            .card-text {
+              text-align: center;
+            }
+          }
+        }
+      }
+    }
   }
 
   .projects {
+    margin-bottom: 2rem;
+
     .card-section {
       display: grid;
       grid-template-columns: repeat(3, 1fr);
+
+      .card {
+        margin: 0px 7px;
+
+        .card-body {
+          display: flex;
+          justify-content: center;
+        }
+      }
     }
   }
 }
